--- a/JPFMonitoringPlugin.uplugin
+++ b/JPFMonitoringPlugin.uplugin
@@ -2,7 +2,7 @@
 	"FileVersion": 3,
 	"Version": 1,
 	"VersionName": "1.0",
-	"FriendlyName": "FPSSocketStreaming",
+	"FriendlyName": "JPFMonitoringPlugin",
 	"Description": "",
 	"Category": "Other",
 	"CreatedBy": "Lori Lou, Lucas Guichard",
@@ -15,7 +15,7 @@
 	"Installed": false,
 	"Modules": [
 		{
-			"Name": "FPSSocketStreaming",
+			"Name": "JPFMonitoringPlugin",
 			"Type": "Runtime",
 			"LoadingPhase": "Default"
 		}
