Chore: remove unused code + finish renaming old classes

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
 # Visual Studio 2015 user specific files
 .vs/
 .idea/
-
-# Automation subfolder
-!Resources/**/
+Resources/.idea/*
 
 # Compiled Object files
 *.slo
